data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2570.wast
;; 9. **Multiple `br_table` with Mixed Local/Imported Branch Targets:**    - Construct a module using multiple `br_table` instructions with mixed targets of local labels and imported functions.    - **Constraint Checked:** Managing control flow transitions and operand stack integrity across mixed local and imported target labels within `br_table`.    - **Reasoning:** Ensures robust control flow and correct operand stack management through multiple `br_table` instruction interactions involving cross-module boundaries.

(assert_invalid
  (module
    (import "env" "external_function" (func $external_function (result i32)))
    (func $multiple_br_tables
      (block $block0
        (block $block1
          (block $block2 (br_table 0 1 $block1))
          (block $block3 (br_table 1 $block0))
          (call $external_function)
        )
      )
    )
  )
  "type mismatch"
)